issue #75: implemented endpoint updateCategory