@@ -31,6 +31,7 @@
             --add-opens org.financer.server/org.financer.server.domain.service=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.domain.repository=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.domain.model.transaction=ALL-UNNAMED
+            --add-opens org.financer.server/org.financer.server.domain.model.category=ALL-UNNAMED
             --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
             --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
             --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
